Some features on the index page

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -36,14 +36,72 @@
 	color: #FF4296;
 }
 
-.navbar-inverse .navbar-brand .navbar-logo:hover,
-.navbar-inverse .navbar-brand .navbar-logo:focus { 
-	color: #FF4296;
-}
-
-
 .navbar .brand, 
 .navbar .nav > li > a:hover {
     color: #E34297;
 }
+
+.ghosty {
+	margin-top: 175px;
+	background:rgba(0,0,0, 0.25);
+  color:white;
+  padding-bottom: 15px;
+  padding-top: 10px;
+}
+
+.features {
+	color: white;
+}
+
+.clr {
+	clear:both;
+}
+
+.box {
+  -moz-box-shadow: 0px 0px 0px 0 #d0d0d0;
+  -webkit-box-shadow: 0px 0px 0px 0 #d0d0d0;
+  box-shadow: 0px 0px 0px 0 #d0d0d0;
+  background:rgba(0,0,0, 0.25);
+  padding-bottom: 15px;
+  padding-top: 10px;
+}
+
+.btn {
+    padding: 14px 24px;
+    border: 0 none;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+ 
+.btn:focus, .btn:active:focus, .btn.active:focus {
+    outline: 0 none;
+}
+ 
+.btn-primary {
+    background: #0099cc;
+    color: #ffffff;
+}
+ 
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+    background: #33a6cc;
+}
+ 
+.btn-primary:active, .btn-primary.active {
+    background: #007299;
+    box-shadow: none;
+}
+
+.btn.outline {
+    background: none;
+    padding: 12px 22px;
+}
+
+.btn-primary.outline {
+    border: 2px solid #0099cc;
+    color: #0099cc;
+}
+
+
+
 
