--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -1,5 +1,24 @@
 <div class="hero">
-	<div class="container-fluid">
-
+	<div class="ghosty col-xs-10 col-xs-offset-1 text-center">
+		<h1>Are we there yet?</h1>
+    <h2>Master of the roads says relax!</h2>
+    <br />
+    	<%= link_to 'Learn More', '#', class: 'btn btn-warning pull-right' %>
 	</div>			
-</div>	
+<br />
+<div class="clr"></div>
+<br/>
+	<div class="col-xs-12 col-xs-offset-0 features text-center">
+		<div class="box col-sm-4">
+			<h3>Feature 1</h3>
+		</div>
+
+		<div class="box col-sm-4">
+			<h3>Feature 2</h3>
+		</div>
+
+		<div class="box col-sm-4">
+			<h3>Feature 3</h3>
+		</div>
+	</div>	
+</div>
