--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,5 +1,5 @@
 .navbar-inverse .navbar-brand{
-  font-family:'sf_speakeasyoblique';
+  font-family: 'sf_speakeasyregular';
   color: #F5F2A2;
   font-size: 50px;
   
