--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,16 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <div class="navbar-logo">
-       	<a class="navbar-brand" href="#"> My work </a>
-       	<%= image_tag 'Drawing.png', class: 'img-responsive'%>
-      </div>  	
+        <div class="navbar-logo">
+          <%= image_tag 'laid-cat.png', class: 'img-responsive'%>
+        </div>  	
     </div>
+    <a class="navbar-brand" href="#"> Web development </a> 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
       	<li><a href="#"> / Blog / </a></li>
-        <li><a href="#"> / .Me / </a></li>
+        <li><a href="#"> / About / </a></li>
         <li><a href="#"> / Drop me a line / </a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
