Moved info out of the hero's way

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,7 @@
+.navbar-inverse .navbar-logo{
+	padding-top: -10px;
+}
+
 .navbar-inverse .navbar-brand{
   font-family: 'sf_speakeasyregular';
   color: #EC971F;
@@ -17,10 +21,9 @@
 	  background:rgba(0,0,0, 0.0);
 	  border:0px;
 	  border-radius: 0;
-    padding-top:45px;
-    height: 95px;
-    
-   
+    padding-top:35px;
+    height: 90px;  
+    padding-bottom: 20px;
  }   
 
 .hero {
@@ -43,7 +46,7 @@
 }
 
 .ghosty {
-	margin-top: 375px;
+	margin-top: 35px;
 	background:rgba(0,0,0, 0.25);
   color:white;
   padding-bottom: 15px;
