--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -1,14 +1,16 @@
-<div class="hero">			
 
+<div class="hero">			
 </div>
+
+
 <div class="ghosty col-xs-10 col-xs-offset-1 text-center">
 	<h1>Meet our team</h1>
 </div>	
 
 <div class="col-xs-6 col-xs-offset-1 text-left">
 	<b><h2>Seb</h2></b>
-	<h3>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. He is a music lover and cat friendly. 
-	Joined our Laid Cat to build incredible apps and to persuit awesomeness.</h3>
+	<p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
+	Joined Laid Cat to build incredible apps and to persuit awesomeness.</p>
 </div>
 <div class="clr"></div>
 <br/>
