--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,8 +7,8 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-	<!-- navbar begins here -->
+<body id="skrollr-body">
+  	<!-- navbar begins here -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -16,15 +17,13 @@
           <%= image_tag 'laid-cat.png', class: 'img-responsive'%>
         </div>  	
     </div>
-    <a class="navbar-brand" href="#"> Web development </a> 
+    <a class="navbar-brand" href="#"> W e b - D e v e l o p m e n t </a> 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <div class="col-xs-7">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">   
         <ul class="nav navbar-nav navbar-right">
           <%= link_to 'About', '#', :class => 'btn btn-warning btn-md' %>
           <%= link_to 'Drop a line', '#', :class => 'btn btn-warning btn-md' %>
-        </ul>
-      </div>  
+        </ul>    
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
@@ -32,5 +31,10 @@
 
 <%= yield %>
 
+<script type="text/javascript" src="skrollr"></script>
+  <script type="text/javascript">
+  var s = skrollr.init({forceHeight: false});
+  </script>
 </body>
+
 </html>
