--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -1,13 +1,19 @@
 
-<div class="hero">			
-</div>
-
 
 <div class="ghosty col-xs-10 col-xs-offset-1 text-center">
 	<h1>Meet our team</h1>
 </div>	
 
 <div class="col-xs-6 col-xs-offset-1 text-left">
+	<b><h2>Seb</h2></b>
+	<p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
+	Joined Laid Cat to build incredible apps and to persuit awesomeness.</p>
+	<b><h2>Seb</h2></b>
+	<p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
+	Joined Laid Cat to build incredible apps and to persuit awesomeness.</p>
+	<b><h2>Seb</h2></b>
+	<p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
+	Joined Laid Cat to build incredible apps and to persuit awesomeness.</p>
 	<b><h2>Seb</h2></b>
 	<p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
 	Joined Laid Cat to build incredible apps and to persuit awesomeness.</p>
@@ -22,4 +28,4 @@
 	<div class="box col-sm-6">
 		<h3>Feature 2</h3>
 	</div>
-</div>	
+	
