--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -1,31 +1,72 @@
 
 
-<div class="ghosty col-xs-10 col-xs-offset-1 text-center">
-	<h1>Meet our team</h1>
+<div class="ghosty-1 col-xs-12 col-xs-offset-0 text-center">
+	<h1>Meet </h1>
 </div>	
-
-<div class="col-xs-6 col-xs-offset-1 text-left">
-	<b><h2>Seb</h2></b>
-	<p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
-	Joined Laid Cat to build incredible apps and to persuit awesomeness.</p>
-	<b><h2>Seb</h2></b>
-	<p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
-	Joined Laid Cat to build incredible apps and to persuit awesomeness.</p>
-	<b><h2>Seb</h2></b>
-	<p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
-	Joined Laid Cat to build incredible apps and to persuit awesomeness.</p>
-	<b><h2>Seb</h2></b>
-	<p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
-	Joined Laid Cat to build incredible apps and to persuit awesomeness.</p>
-</div>
 <div class="clr"></div>
-<br/>
-<div class="col-xs-12 col-xs-offset-0 features text-center">
-	<div class="box col-sm-6">
-		<h3>Feature 1</h3>
+<!-- 
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-6">
+			<b><h2>Seb</h2></b>
+				<p1>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
+				Joined Laid Cat to build incredible apps and persuit awesomeness.</p1></div>
+		<div class="col-sm-6">
+			<h3>Image here!</h3></div>
+	</div>		
+	<div class="row">
+		<div class="col-sm-6">
+			<b><h2>Seb</h2></b>
+			<div class="panel panel-default">			
+				<div class="panel-body">
+					<p1>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
+					Joined Laid Cat to build incredible apps and persuit awesomeness.</p1></div></div></div>
+		<div class="col-sm-6">
+			<h3>Image here!</h3></div>
+		</div>		
+		<div class="row">
+		<div class="col-sm-6">
+			<b><h2>Seb</h2></b>
+				<p1>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML 	Ruby, R, Python and JQuery. I'm a music lover, beer drinker, movies marathonist and cat friendly. 
+				Joined Laid Cat to build incredible apps and persuit awesomeness.</p1></div>
+		<div class="col-sm-6 md-4 lg-3">
+			<h3>Image here!</h3></div>			
 	</div>
+<div/>				
+<div class="clr"></div>
 
-	<div class="box col-sm-6">
-		<h3>Feature 2</h3>
-	</div>
-	
+<div class="row">
+		<div class="ghosty-1 col-xs-12">
+			<h3>Some thigns I've made</h3>
+		</div>
+</div>
+<br /> -->
+<br />
+<div class="clr"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-6 col-md-4"><p>Box 1</p></div>
+        <div class="col-sm-6 col-md-4"><p>Box 2</p></div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-sm-6 col-md-4"><p>Box 3</p></div>
+        <div class="clearfix visible-md-block"></div>
+        <div class="col-sm-6 col-md-4"><p>Box 4</p></div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-sm-6 col-md-4"><p>Box 5</p></div>
+        <div class="col-sm-6 col-md-4"><p>Box 6</p></div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="clearfix visible-md-block"></div>
+        <div class="col-sm-6 col-md-4"><p>Box 7</p></div>
+        <div class="col-sm-6 col-md-4"><p>Box 8</p></div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-sm-6 col-md-4"><p>Box 9</p></div>
+        <div class="clearfix visible-md-block"></div>
+        <div class="col-sm-6 col-md-4"><p>Box 10</p></div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-sm-6 col-md-4"><p>Box 11</p></div>
+        <div class="col-sm-6 col-md-4"><p>Box 12</p></div>
+    </div>
+</div>
+ 
+
+
