--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,8 @@
+html, body {
+    margin:0;
+    padding:0;
+}
+
 header {
 	background: url('cat-obscured.jpg') no-repeat center fixed;
 	height: 750px;
@@ -8,8 +13,9 @@ header {
 }
 
 .navbar-inverse {
-	padding-left: 65px;
+	padding-left: 55px;
 	padding-top: 25px;
+	padding-right: 45px;
 }
 
 .navbar-inverse .navbar-brand{
@@ -20,6 +26,7 @@ header {
 }
 .navbar-inverse .navbar-logo{
 	border: 0px solid #ff4296;
+	float: left;
 	
 }
 
@@ -33,12 +40,31 @@ a {
 	margin-left:10px;
 }
 
+p { 
+	padding: 50px;
+	font-size: 32px;
+	font-weight: bold;
+	text-align: center;
+	background: #dbdfe5;
+}
+
 .navbar.navbar-inverse {
 		background-color: transparent;
 	  border:0px;
 	  border-radius: 0;  
     padding-top:40px;
 } 
+
+.navbar-inverse .navbar-toggle {
+	background-color: transparent;
+	border:0px;
+}
+
+.navbar-inverse .navbar-toggle:hover,
+.navbar-inverse .navbar-toggle:focus {
+	 background: #ff4296;
+   border-color: #ff4296;
+}
 
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus { 
@@ -50,7 +76,8 @@ a {
     color: #E34297;
 }
 
-.ghosty {
+
+.ghosty-1 {
 	margin-top: 35px;
 	background:rgba(0,0,0, 0.25);
   color:white;
@@ -58,12 +85,34 @@ a {
   padding-top: 10px;
 }
 
-.features {
-	color: white;
+.ghosty-2 {
+	margin-top: 35px;
+	background:rgba(0,0,0, 0.25);
+  color:white;
+  padding-bottom: 15px;
+  padding-top: 10px;
 }
 
-.clr {
-	clear:both;
+
+footer {
+	height:150px;
+	color:white;
+	background-color: rgba(36,32,33,0.9);
+	font-family:"Helvetica Neue", Helvetica;
+	padding:10px 0px;
+	margin-top:30px;
+	font-weight:100;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background: url('cat-obscured.jpg') no-repeat center fixed;
+	background-size: cover;
+}
+
+.clr{
+    width:100%;
+    height:0px;
+    clear:both;
 }
 
 .box {
