--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,19 +20,34 @@
       </button>
     <!-- Brand and toggle get grouped for better mobile display -->           
         <div class="navbar-logo pull-left">
-          <%= image_tag 'laid-cat.png', :class => 'img-responsive'%>
-          <a class="navbar-brand" href="#"> W e b - D e v e l o p m e n t </a> 
+          <!-- %= image_tag 'web.png', :class => 'img-responsive'%> -->
+          <!--a class="navbar-brand" href="#"> W e b - D e v e l o p m e n t </a> -->
        </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">   
         <ul class="nav navbar-nav navbar-right">
-          <%= link_to 'About', '#', :class => 'btn btn-warning btn-lg' %>
-          <%= link_to 'Work', '#', :class => 'btn btn-warning btn-lg' %>
-          <%= link_to 'Drop a line', '#', :class => 'btn btn-warning btn-lg' %>
+          <%= link_to 'About', '#', :class => 'btn btn-md' %>
+          <%= link_to 'Work', '#', :class => 'btn btn btn-md' %>
+          <%= link_to 'Drop a line', '#', :class => 'btn btn-default btn-md' %>
         </ul>    
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
+  <div class="jumbotron">
+    <div class="container">
+    <h1>
+      I'm Seb
+    </h1> 
+    <br /> 
+    <br />
+    <br />
+    <br />
+    <h2> Full stack web developer </h2>
+      <span> Day long dreamer </span>
+   </div> 
+  </div> 
 </header>
+
+
 
 <%= yield %>
 <!--footer starts here -->
@@ -40,11 +55,12 @@
 
 
 <footer>
-  <div class="container narrow row-fluid">
-    <%= image_tag 'laid-cat.png', :class => 'img-responsive pull-left'%>
+  <div class="container">
+    <!-- %= image_tag 'web.png', :class => 'img-responsive pull-left'%> -->
     <div class="col-xs-12 col-sm-3">
-      <%= link_to 'About', '#', :class => 'btn btn-warning btn-sm pull-left' %>
-      <%= link_to 'Drop a line', '#', :class => 'btn btn-warning btn-sm pull-left' %>
+      <%= link_to 'About', '#', :class => 'btn btn-info btn-xs' %>
+      <br />
+      <%= link_to 'Drop a line', '#', :class => 'btn btn-info btn-xs' %>
     </div>  
     <div class="col-xs-12 col-sm-3">
       <br />
