--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -23,3 +23,16 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'blackjackregular';
+    src: url('/assets/black_jack-webfont.eot');
+    src: url('/assets/black_jack-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/assets/black_jack-webfont.woff2') format('woff2'),
+         url('/assets/black_jack-webfont.woff') format('woff'),
+         url('/assets/black_jack-webfont.ttf') format('truetype'),
+         url('/assets/black_jack-webfont.svg#blackjackregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
