--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -1,8 +1,11 @@
 
-
-<div class="ghosty-1 col-xs-12 col-xs-offset-0 text-center">
-	<h2>Meet </h2>
+<div class="row">
+	<div class="col-xs-12 col-xs-offset-0 text-center">
+		<h2>Some stuff I've built </h2>
+	</div>	
 </div>	
+
+
 <div class="clr"></div>
 <!-- 
 <div class="container-fluid">
@@ -45,7 +48,7 @@
 <div class="clr"></div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-6 col-md-4"><p>Box 1</p></div>
+        <div class="col-sm-6 col-md-4"><p>imag 1</p></div>
         <div class="col-sm-6 col-md-4"><p>Box 2</p></div>
         <div class="clearfix visible-sm-block"></div>
         <div class="col-sm-6 col-md-4"><p>Box 3</p></div>
