--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-  <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-top" role="navigation">
     <div class="container-fluid"> 
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
@@ -20,14 +20,14 @@
       </button>
     <!-- Brand and toggle get grouped for better mobile display -->           
         <div class="navbar-logo pull-left">
-          <!-- %= image_tag 'web.png', :class => 'img-responsive'%> -->
+          <%= image_tag 'web2.png', :class => 'img-responsive'%> 
           <!--a class="navbar-brand" href="#"> W e b - D e v e l o p m e n t </a> -->
        </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">   
         <ul class="nav navbar-nav navbar-right">
-          <%= link_to 'About', '#', :class => 'btn btn-md' %>
-          <%= link_to 'Work', '#', :class => 'btn btn btn-md' %>
-          <%= link_to 'Drop a line', '#', :class => 'btn btn-default btn-md' %>
+          <%= link_to 'About', '#', :class => 'btn btn-sm' %>
+          <%= link_to 'Work', '#', :class => 'btn btn btn-sm' %>
+          <%= link_to 'Drop a line', '#', :class => 'btn btn-default btn-sm' %>
         </ul>    
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -37,9 +37,6 @@
     <h1>
       I'm Seb
     </h1> 
-    <br /> 
-    <br />
-    <br />
     <br />
     <h2> Full stack web developer </h2>
       <span> Day long dreamer </span>
@@ -55,14 +52,11 @@
 
 
 <footer>
-  <div class="container">
-    <!-- %= image_tag 'web.png', :class => 'img-responsive pull-left'%> -->
-    <div class="col-xs-12 col-sm-3">
+  <div class="row">
+    <div class="col-sm-6 col-md-offset-1">
       <%= link_to 'About', '#', :class => 'btn btn-info btn-xs' %>
       <br />
       <%= link_to 'Drop a line', '#', :class => 'btn btn-info btn-xs' %>
-    </div>  
-    <div class="col-xs-12 col-sm-3">
       <br />
       <%= link_to '#' do %>
         <%= image_tag 'github.png', :class => 'social-button' %>
