--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,66 +6,106 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
 
-<header>
-  <nav class="navbar navbar-inverse navbar-top" role="navigation">
-    <div class="container-fluid"> 
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    <!-- Brand and toggle get grouped for better mobile display -->           
-        <div class="navbar-logo pull-left">
-          <%= image_tag 'web2.png', :class => 'img-responsive'%> 
-          <!--a class="navbar-brand" href="#"> W e b - D e v e l o p m e n t </a> -->
-       </div>
-      <div class="collapse navbar-collapse" id="navbar-collapse">   
-        <ul class="nav navbar-nav navbar-right">
-          <%= link_to 'About', '#', :class => 'btn btn-sm' %>
-          <%= link_to 'Work', '#', :class => 'btn btn btn-sm' %>
-          <%= link_to 'Drop a line', '#', :class => 'btn btn-default btn-sm' %>
-        </ul>    
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-  <div class="jumbotron">
-    <div class="container">
-    <h1>
-      I'm Seb
-    </h1> 
-    <br />
-    <h2> Full stack web developer </h2>
-      <span> Day long dreamer </span>
-   </div> 
-  </div> 
-</header>
-
-
-
-<%= yield %>
-<!--footer starts here -->
-<div class="clr"></div>
-
-
-<footer>
-  <div class="row">
-    <div class="col-sm-6 col-md-offset-1">
-      <%= link_to 'About', '#', :class => 'btn btn-info btn-xs' %>
+<div id="wrap">
+  <header>
+    <nav class="navbar navbar-inverse navbar-top" role="navigation">
+      <div class="container-fluid"> 
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      <!-- Brand and toggle get grouped for better mobile display -->           
+          <div class="navbar-logo pull-left">
+            <%= image_tag 'web2.png', :class => 'img-responsive'%> 
+            <!--a class="navbar-brand" href="#"> W e b - D e v e l o p m e n t </a> -->
+         </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">   
+          <ul class="nav navbar-nav navbar-right">
+            <%= link_to 'About', '#', :class => 'btn btn-sm' %>
+            <%= link_to 'Work', '#', :class => 'btn btn btn-sm' %>
+            <%= link_to 'Drop a line', '#', :class => 'btn btn-default btn-sm' %>
+          </ul>    
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <div class="jumbotron">
+      <div class="container">
+      <h1>
+        I'm Seb
+      </h1> 
       <br />
-      <%= link_to 'Drop a line', '#', :class => 'btn btn-info btn-xs' %>
-      <br />
-      <%= link_to '#' do %>
-        <%= image_tag 'github.png', :class => 'social-button' %>
-      <% end %>
-      <%= image_tag 'gmail.png', :class => 'social-button' %>  
+      <h2> Full stack web developer </h2>
+        <span> Day long dreamer </span>
+     </div> 
     </div> 
-  </div>  
-</footer>  
+  </header>
 
+  <br style="clr">
+
+  <section class="members-section col-sm-12 col-xs-12">
+    <div class="row">
+      <div class="col-sm-5 col-xs-10 col-xs-offset-1">
+        <br />
+        <div class="col-sm-4 col-xs-12 Seb">
+          <div class="pickgradient orange">
+            <img alt="cat" class="img-responsive img-circle" src="assets/laid-cat.png">
+          </div>  
+        </div> 
+      <div class="col-sm-8 col-xs-12">
+        <h3>Seb</h3>
+        <p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML  Ruby, R, and JQuery. I'm a music lover, beer drinker, number cruncher and film marathonist and cat friendly. 
+        Love to build incredible apps and persuit awesomeness...</p>    
+      </div> 
+    </div>  
+  </section>  
+
+
+  <%= yield %>
+  <!--footer starts here -->
+  <div class="clr"></div>
+
+
+</div>
+
+  <div id="footer">
+    <div class="container">
+      <div class="col-xs-6 col-sm-3">
+        <b>Check Me Out</b>
+        <br />
+        <br />
+        <%= link_to 'About', '#', :class => 'btn btn-sm pull-left' %>
+        <%= link_to 'Work', '#', :class => 'btn btn btn-sm' %>
+      </div>
+      <div class="col-xs-6 col-sm-3 pull-right">
+        <b>Contact</b>
+        <br />
+        tonomudo@gmail.com
+        <br />
+        Montreal, QC
+        <br />
+        H3X 2B5
+      </div>
+      <div class="col-xs-6 col-sm-3 pull-right">
+        <b>Social</b>
+        <br />
+        <br />
+        <%= image_tag 'github.png', class: 'social-button' %>
+        <%= image_tag 'gmail.png', class: 'social-button' %>
+      </div>
+    </div>
+  </div> 
+
+
+
+<script>
+
+</script>
 
 </body>
 </html>
