--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
          </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">   
           <ul class="nav navbar-nav navbar-right">
-            <%= link_to 'About', '#', :class => 'btn btn-sm' %>
+            <%= link_to 'About', 'about', :class => 'btn btn-sm' %>
             <%= link_to 'Work', '#', :class => 'btn btn btn-sm' %>
             <%= link_to 'Drop a line', '#', :class => 'btn btn-default btn-sm' %>
           </ul>    
@@ -41,7 +41,7 @@
       </h1> 
       <br />
       <h2> Full stack web developer </h2>
-        <span> Day long dreamer </span>
+        <span> Interactive web apps builder </span>
      </div> 
     </div> 
   </header>
@@ -57,10 +57,10 @@
             <img alt="cat" class="img-responsive img-circle" src="assets/laid-cat.png">
           </div>  
         </div> 
-      <div class="col-sm-8 col-xs-12">
+      <div class="col-sm-8 col-xs-12" id="about">
         <h3>Seb</h3>
-        <p>Ruby on rails web full stack developer, some programming languages in his belt are: CSS, HTML  Ruby, R, and JQuery. I'm a music lover, beer drinker, number cruncher and film marathonist and cat friendly. 
-        Love to build incredible apps and persuit awesomeness...</p>    
+        <p>Full stack developer, some programming languages in my belt are: CSS, HTML  Ruby, R, and JQuery. I'm a music lover, beer drinker, number cruncher, film marathonist and cat friendly. 
+        Love to build incredible apps and to persuit awesomeness...</p>    
       </div> 
     </div>  
   </section>  
@@ -79,8 +79,8 @@
         <b>Check Me Out</b>
         <br />
         <br />
-        <%= link_to 'About', '#', :class => 'btn btn-sm pull-left' %>
-        <%= link_to 'Work', '#', :class => 'btn btn btn-sm' %>
+        <%= link_to 'About', '#', :class => 'btn btn-xs pull-left' %>
+        <%= link_to 'Work', '#', :class => 'btn btn btn-xs' %>
       </div>
       <div class="col-xs-6 col-sm-3 pull-right">
         <b>Contact</b>
